--- a/registration/src/main/webapp/WEB-INF/web.xml
+++ b/registration/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,12 @@
 		<description></description>
 		<servlet-class>com.init.WelcomeScreen</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>RegistrationInit</servlet-name>
+		<display-name>RegistrationInit</display-name>
+		<description></description>
+		<servlet-class>com.init.RegistrationInit</servlet-class>
+	</servlet>
   <servlet-mapping>
   	<servlet-name>VerificationInit</servlet-name>
   	<url-pattern>/login</url-pattern>
@@ -35,6 +41,10 @@
   <servlet-mapping>
   	<servlet-name>WelcomeScreen</servlet-name>
   	<url-pattern>/welcome</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>RegistrationInit</servlet-name>
+  	<url-pattern>/Registered</url-pattern>
   </servlet-mapping>
   
 </web-app>
